--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<nav class="header-nav">
 					<ul class="header-nav__menu">
 						<li class="header-nav__menu-item">
-							<a href="">홈</a>
+							<a href="" class="active">홈</a>
 						</li>
 						<li class="header-nav__menu-item">
 							<a href="">사업개요</a>
@@ -56,19 +56,28 @@
 			<section class="sec-mv">
 				<ul class="mv-slider js-mv-slider">
 					<li class="mv-slider__item">
-						<img src="./img/mv-img-01.jpg" alt="THE MARKONE">
+						<img src="./img/mv-img-01.jpg" alt="THE MARKONE" class="pc">
+						<img src="./img/mv-img-01-sp.jpg" alt="THE MARKONE" class="sp">
+						<div class="mv-heading">
+							<h1 class="mv-heading__ttl c-ft--kr">
+								<span>뉴타운</span>이 꿈꾸던<br>
+								<span>역대급</span>프리미엄! </h1>
+							<p>여의도부터 생활까지 앞서가는 초역세권 라이프!</p>
+							<a href="./contact.html" class="mv-heading__btn"> 상담방문예약 > </a>
+						</div>
 					</li>
 					<li class="mv-slider__item">
-						<img src="./img/mv-img-02.jpg" alt="THE MARKONE">
+						<img src="./img/mv-img-02.jpg" alt="THE MARKONE" class="pc">
+						<img src="./img/mv-img-02-sp.jpg" alt="THE MARKONE" class="sp">
+						<div class="mv-heading">
+							<h1 class="mv-heading__ttl c-ft--kr">
+								<span>뉴타운</span>이 꿈꾸던<br>
+								<span>역대급</span>프리미엄! </h1>
+							<p>- 여의대방 더 마크원</p>
+							<a href="./contact.html" class="mv-heading__btn"> 상담방문예약 > </a>
+						</div>
 					</li>
 				</ul>
-				<div class="mv-heading">
-					<h1 class="mv-heading__ttl c-ft--kr">
-						<span>뉴타운</span>이 꿈꾸던<br>
-						<span>역대급</span>프리미엄! </h1>
-					<p>여의도부터 생활까지 앞서가는 초역세권 라이프!</p>
-					<a href="./contact.html" class="mv-heading__btn"> 상담방문예약 > </a>
-				</div>
 				<a href="#about" class="scroll-dow js-scroll">
 					<i class="fa-solid fa-circle-down"></i>
 				</a>
@@ -104,7 +113,9 @@
 			</section>
 			<section class="sec-premium">
 				<div class="inner">
-					<h2 class="c-ttl__01"> PREMIUM 5 </h2>
+					<h2 class="c-ttl__01 c-ft--kr-serit">
+						<span>PREMIUM 5</span>
+					</h2>
 					<ul class="premium-list c-ft--kr">
 						<li class="premium-list__item">
 							<h3 class="premium-list__name">PREMIUM TRAFFIC</h3>
@@ -159,6 +170,30 @@
 					</ul>
 				</div>
 			</section>
+			<div class="popup-note">
+				<span class="popup-note__close"><i class="fa-solid fa-xmark"></i></span>
+				<div class="popup-note__logo">
+					<img src="./img/logo.png" alt="THE MARKONE">
+				</div>
+				<h3 class="popup-note__ttl c-ft--kr">
+					<span>여의도</span>를<span>눈앞</span>에!<br>
+					<span>역세권</span>을<span>집앞</span>에! </h3>
+				<div class="popup-note__ct">
+					<h4 class="popup-note__ct-ttl c-ft--kr-serit">[ PREMIUM POINT ]</h4>
+					<ul>
+						<li>신림선 초역세권</li>
+						<li>42층 초고층 스카이마크</li>
+						<li>350m 스트리트형 상업시설</li>
+						<li>100m 초품아 단지</li>
+						<li>신길뉴타운 맨 앞자리</li>
+					</ul>
+				</div>
+				<p class="popup-note__ct-note">■ 총 1,228 세대<small>(예정)</small>| 52㎡/ 59㎡/ 84㎡</p>
+				<p>사전 방문예약제 운영중! 미리 예약후 찾아주세요.</p>
+				<a href="" class="popup-note__btn c-ft--kr"><i class="fa-solid fa-check"></i>상담/방문예약 신청</a>
+				<div class="popup-note__tel"> 홍보관<strong>1688-8343</strong>
+				</div>
+			</div>
 		</main>
 		<footer id="footer">
 			<div class="inner">
@@ -177,6 +212,14 @@
 				</div>
 			</div>
 		</footer>
+		<ul class="block-note sp">
+			<li>
+				<a href="tel:16888343" class="block-note__tel c-ft--kh"><i class="fa-solid fa-phone"></i>1688-8343<small>연결</small></a>
+			</li>
+			<li>
+				<a href="./contact.html" class="block-note__mail"><i class="fa-solid fa-envelope"></i>상담방문<small>예약</small></a>
+			</li>
+		</ul>
 		<script src="./js/jquery-3.6.0.min.js"></script>
 		<script src="./js/slick/slick.min.js"></script>
 		<script src="./js/setting.js"></script>
