--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 				<nav class="header-nav">
 					<ul class="header-nav__menu">
 						<li class="header-nav__menu-item">
-							<a href="" class="active">홈</a>
+							<a href="/" class="active">홈</a>
 						</li>
 						<li class="header-nav__menu-item">
-							<a href="">사업개요</a>
+							<a href="./introduce.html">사업개요</a>
 						</li>
 						<li class="header-nav__menu-item">
-							<a href="">입지가치</a>
+							<a href="./location.html">입지가치</a>
 						</li>
 						<li class="header-nav__menu-item">
-							<a href="">배치도</a>
+							<a href="./layout.html">배치도</a>
 						</li>
 						<li class="header-nav__menu-item">
 							<a href="" class="header-nav__menu-sub">평면</a>
 							<ul class="header-nav__menu-submenu">
-								<li><a href="">52㎡A 평면</a></li>
-								<li><a href="">59㎡A, 59㎡B 평면</a></li>
-								<li><a href="">84㎡A, 84㎡B 평면</a></li>
+								<li><a href="./52a.html">52㎡A 평면</a></li>
+								<li><a href="./59a59b.html">59㎡A, 59㎡B 평면</a></li>
+								<li><a href="./84a84b.html">84㎡A, 84㎡B 평면</a></li>
 							</ul>
 						</li>
 						<li class="header-nav__menu-item">
-							<a href="">배치도</a>
+							<a href="./contact.html">배치도</a>
 						</li>
 					</ul>
 				</nav>
